fix api update order -> create invoice
