# app/Http/Resources/OrderResource.php
@@ -23,6 +23,7 @@ class OrderResource extends JsonResource
             'email' => $this->email,
             'phone_number' => $this->phone_number,
             'address' => $this->address,
+            'employee_id'=>$this->employee_id,
             'payment_method' => $this->payment_method,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
